src/test/ui/check-doc-alias-attr.stderr
error: doc alias attribute expects a string: #[doc(alias = "0")]
  --> $DIR/check-doc-alias-attr.rs:7:7
   |
LL | #[doc(alias)]
   |       ^^^^^

error: doc alias attribute expects a string: #[doc(alias = "0")]
  --> $DIR/check-doc-alias-attr.rs:8:7
   |
LL | #[doc(alias = 0)]
   |       ^^^^^^^^^

error: doc alias attribute expects a string: #[doc(alias = "0")]
  --> $DIR/check-doc-alias-attr.rs:9:7
   |
LL | #[doc(alias("bar"))]
   |       ^^^^^^^^^^^^

error: aborting due to 3 previous errors

